<resources>
    <string name="app_name">prj1</string>
    <string name="action_settings">Settings</string>
    <string name="action_aboutus">درباره‌ما</string>
    <string name="title_aboutus">درباره‌ما</string>
    <string name="ahmadian_aboutus">نوید احمدیان - ۹۲۱۱۰۲۳۸</string>
    <string name="izadi_aboutus">محمد‌حسین ایزدی - ۹۲۱۰۶۳۵۶</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="new_game">بازی جدید</string>
    <string name="save_game">ذخیره بازی</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
