<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:id="@+id/aboutus_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/title_aboutus"/>

    <TextView
        android:id="@+id/stName_ahmadian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_aboutus"
        android:textAlignment="center"
        android:text="@string/ahmadian_aboutus"/>

    <TextView
        android:id="@+id/stName_izadi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/izadi_aboutus"/>

</LinearLayout>
