<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/other_fragments">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/button_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_menu"
            android:layout_gravity="right"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/button_left"
                android:layout_width="@dimen/button_w"
                android:layout_height="@dimen/button_h"
                android:layout_below="@+id/button_up"
                android:text="@string/left" />
            <Button
                android:id="@+id/button_up"
                android:layout_width="@dimen/button_w"
                android:layout_height="@dimen/button_h"
                android:layout_toRightOf="@+id/button_left"
                android:text="@string/up"/>
            <Button
                android:id="@+id/button_down"
                android:layout_width="@dimen/button_w"
                android:layout_height="@dimen/button_h"
                android:layout_below="@+id/button_up"
                android:layout_toRightOf="@+id/button_left"
                android:text="@string/down"/>
            <Button
                android:id="@+id/button_right"
                android:layout_width="@dimen/button_w"
                android:layout_height="@dimen/button_h"
                android:layout_below="@+id/button_up"
                android:layout_toRightOf="@+id/button_down"
                android:text="@string/right"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>